#JC-1821 - Fixed small issues found by QA - Column "Topics/Posts" is not visible if the size of browser    is less then 480px - Increase size for the labels "Topics without answers "    and "Topics without answer" so it is not needed to wrap to    the second line

--- a/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
+++ b/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
@@ -71,12 +71,12 @@ ul.lang-menu li img {
     color: rgb(85, 85, 85);
 }
 
-.span9 #right-block {
+.span7 #right-block {
     float: right;
     overflow: hidden;
 }
 
-.span9 #right-block a {
+.span7 #right-block a {
     font-weight: bold;
     padding-left: 2px;
     color: rgb(85, 85, 85);
@@ -271,18 +271,11 @@ ul.lang-menu li img {
 }
 
 @media (max-width: 479px) {
-    #topics-table .posts-views {
+    #topics-table .latest-by {
         display: none;
     }
 }
 
-
-
-@media (max-width: 480px) {
-    .posts-views {
-        display: none;
-    }
-}
 
 #top-line-links-drop-down {
     display: none;
